Bug 255532 - Payee settings for 'find transactions' and 'reports' does not have a function
Summary: Payee settings for 'find transactions' and 'reports' does not have a function
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 267000 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-28 20:35 UTC by Thomas Baumgart
Modified: 2011-02-23 20:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-10-28 20:35:35 UTC
Version:           SVN trunk (using KDE 4.3.5) 
OS:                Linux

Changing the payee selection does not have any influence.

Reproducible: Always

Steps to Reproduce:
Open find transaction dialog, select a single payee and start the search.

Actual Results:  
All transactions are shown.

Expected Results:  
Only transactions assigned to the selected payee show up.

I will take care of it myself.
Comment 1 Thomas Baumgart 2010-10-28 20:54:29 UTC
SVN commit 1190741 by tbaumgart:

Obey payee settings in find transaction dialog and report configuration

BUG: 255532

 M  +5 -4      kfindtransactiondlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190741
Comment 2 Thomas Baumgart 2010-10-28 20:55:31 UTC
SVN commit 1190742 by tbaumgart:

Obey payee settings in find transaction dialog and report configuration

Backported to stable branch

BUG: 255532

 M  +5 -4      kfindtransactiondlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190742
Comment 3 Thomas Baumgart 2011-02-23 20:12:37 UTC
*** Bug 267000 has been marked as a duplicate of this bug. ***