Obey payee settings in find transaction dialog and report configuration

BUG: 255532

svn path=/trunk/extragear/office/kmymoney/; revision=1190741